# lab4-Lazarev

./: CMakeLists.txt  CalorimeterSensitiveDetector (1).cc  CalorimeterSensitiveDetector (1).hh  CalorimeterSensitiveDetector.cc  CalorimeterSensitiveDetector.hh  GeometrySize.hh  MyDetectorConstruction.cc  MyDetectorConstruction.hh  MyPrimaryGenerator.cc  MyPrimaryGenerator.hh  MyRunAction.cc  README.md  main.cc  vis.mac
include/: CalorimeterSensitiveDetector.hh  GeometrySize.hh  MyDetectorConstruction.hh  MyPrimaryGenerator.hh  MyRunAction.hh  PiDecayGenerator.hh  TrackerSensitiveDetector.hh  TupleID.hh
src/: CalorimeterSensitiveDetector.cc  MyDetectorConstruction.cc  MyPrimaryGenerator.cc  MyRunAction.cc  PiDecayGenerator.cc  TrackerSensitiveDetector.cc
